# -Performance-Lab

./: author.txt  pyproject.toml
task1/: task1.py
task2/: task2.py
task3/: task3.py
task4/: task4.py
test/: task2_conditions.txt  task2_points.txt  task3_report.json  task4_nums.txt
